[package]
name = "optimage"
version = "0.3.0"
description = "Converts and optimize image buffers"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.5", features = ["webp-encoder", "avif-encoder"] }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]


[profile.release]
lto = true
opt-level = 3
strip = true
